[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Code/Game/PlayerUI/PlayerUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/PlayerUI/MaterialPicture.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/PlayerUI/TimesText.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/PlayerUI/zero.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/PlayerUI/FoodPicture.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/PlayerUI/PlayerDayText.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/PlayerUI/six.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/PlayerUI/colon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/PlayerUI/PauseButton.png" type="Texture" id=9]

[node name="PlayerUI" type="CanvasLayer"]

pause_mode = 2
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="MaterialsBox" type="HBoxContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 2
alignment = 0
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MaterialsImage" type="TextureRect" parent="MaterialsBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 11.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TimesText" type="TextureRect" parent="MaterialsBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_right = 19.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="TextureRect" parent="MaterialsBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_right = 27.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="FoodBox" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 15.0
margin_right = 204.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 2
alignment = 0
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="FoodImage" type="TextureRect" parent="FoodBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 11.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TimesText" type="TextureRect" parent="FoodBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_right = 19.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="TextureRect" parent="FoodBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_right = 27.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="DayBox" type="HBoxContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 3.0
margin_right = 100.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 2
alignment = 1
_sections_unfolded = [ "Rect", "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="DayText" type="TextureRect" parent="DayBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 83.0
margin_right = 105.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Separator1" type="TextureRect" parent="DayBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_right = 107.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Separator2" type="TextureRect" parent="DayBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_right = 109.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="DayText3" type="TextureRect" parent="DayBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 111.0
margin_right = 117.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TimerBox" type="HBoxContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 16.0
margin_right = 100.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 2
alignment = 1
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Minute" type="TextureRect" parent="TimerBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 87.0
margin_right = 93.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Colon" type="TextureRect" parent="TimerBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_right = 97.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0

[node name="TenSecond" type="TextureRect" parent="TimerBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_right = 105.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Second" type="TextureRect" parent="TimerBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_right = 113.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="PauseButton" type="TextureButton" parent="." index="4" groups=[
"Button",
]]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
_sections_unfolded = [ "Hint", "Margin", "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}


